--- a/ContosoMCP/ContosoMCP.csproj
+++ b/ContosoMCP/ContosoMCP.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,10 +14,14 @@
     <!-- Set recommended package metadata -->
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageId>ContosoMCPServer</PackageId>
-    <PackageVersion>0.2.0-beta</PackageVersion>
+    <PackageVersion>0.3.0-beta</PackageVersion>
     <PackageTags>AI; MCP; server; stdio</PackageTags>
     <Description>An MCP server using the MCP C# SDK.</Description>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="publish-nuget.yml" />
+  </ItemGroup>
 
   <!-- Include additional files for browsing the MCP server. -->
   <ItemGroup>
