--- a/ContosoMCP/publish-nuget.yml
+++ b/ContosoMCP/publish-nuget.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write  # Required for trusted publishing (GitHub OIDC token)
+      id-token: write  # Required for trusted publishing
       contents: read
 
     steps:
@@ -34,15 +34,9 @@ jobs:
       - name: Pack
         run: dotnet pack ContosoMCP/ContosoMCP.csproj --configuration Release --no-build --output ./nupkg
 
-      - name: NuGet login (OIDC ? temp API key)
-        uses: NuGet/login@v1
-        id: nuget-login
-        with:
-          user: ${{ secrets.NUGET_USER }}  # Your nuget.org username (profile name), NOT email
-
       - name: Publish to NuGet.org (Trusted Publishing)
         run: |
           dotnet nuget push ./nupkg/*.nupkg \
-            --api-key ${{ steps.nuget-login.outputs.NUGET_API_KEY }} \
+            --api-key az \
             --source https://api.nuget.org/v3/index.json \
             --skip-duplicate
