--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -38,7 +38,7 @@ jobs:
         uses: NuGet/login@v1
         id: nuget-login
         with:
-          user: ${{ secrets.NUGET_USER }}  # Your nuget.org username (profile name), NOT email
+          user: seaniyer  # Your nuget.org username (profile name), NOT email
 
       - name: Publish to NuGet.org (Trusted Publishing)
         run: |
