--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -44,4 +44,5 @@ jobs:
         run: |
           dotnet nuget push ./nupkg/*.nupkg \
             --api-key ${{ steps.nuget-login.outputs.NUGET_API_KEY }} \
-            --source https://api.nuget.org/v3/index.json 
+            --source https://api.nuget.org/v3/index.json \
+            --skip-duplicate
