Replace legacy NuGet publishing workflows with OIDC Trusted Publishing

--- a/.github/workflows/publish-nuget-legacy.yml
+++ b/.github/workflows/publish-nuget-legacy.yml
@@ -1,4 +1,4 @@
-name: Publish NuGet Package (Legacy API Key)
+name: Publish NuGet Package (OIDC Trusted Publishing)
 
 on:
   push:
@@ -8,18 +8,15 @@ on:
     types: [published]
   workflow_dispatch:  # Allow manual trigger
 
-# NOTE: This workflow uses the legacy API key approach.
-# You must create a repository secret named NUGET_API_KEY with your NuGet.org API key.
-# To create an API key: https://www.nuget.org/account/apikeys
-
-env:
-  NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+# NOTE: This workflow uses OIDC Trusted Publishing - no long-lived API keys required.
+# Configure Trusted Publishing on NuGet.org: https://learn.microsoft.com/nuget/nuget-org/trusted-publishing
 
 jobs:
   publish:
     runs-on: ubuntu-latest
 
     permissions:
+      id-token: write  # Required for OIDC token authentication with NuGet.org
       contents: read
 
     steps:
@@ -40,9 +37,15 @@ jobs:
       - name: Pack
         run: dotnet pack ContosoMCP/ContosoMCP.csproj --configuration Release --no-build --output ./nupkg
 
-      - name: Publish to NuGet.org (Legacy API Key)
+      - name: NuGet login (OIDC → temp API key)
+        uses: NuGet/login@v1
+        id: nuget-login
+        with:
+          user: YOUR_NUGET_USERNAME  # Replace with your nuget.org profile name (NOT email)
+
+      - name: Publish to NuGet.org (Trusted Publishing)
         run: |
           dotnet nuget push ./nupkg/*.nupkg \
-            --api-key ${{ env.NUGET_API_KEY }} \
+            --api-key ${{ steps.nuget-login.outputs.NUGET_API_KEY }} \
             --source https://api.nuget.org/v3/index.json \
             --skip-duplicate
